SVG pattern to pattern reference does not work if first pattern has a child node https://bugs.webkit.org/show_bug.cgi?id=111586

Reviewed by Philip Rogers.

Source/WebCore:

SVGPatternElement::collectPatternAttributes should test for child elements, not child nodes.

Tests: svg/custom/pattern-reference-expected.svg
       svg/custom/pattern-reference.svg

* svg/SVGPatternElement.cpp:
(WebCore::SVGPatternElement::collectPatternAttributes):

LayoutTests:

* svg/custom/pattern-reference-expected.svg: Added.
* svg/custom/pattern-reference.svg: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@144948 bbb929c8-8fbe-4397-9dbb-9b2b20218538